2003-12-09  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add DjVu support as image/x.djvu

2003-12-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add support for application/x-gchempaint and
	application/x-gcrystal (Closes: #126293)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* man/Makefile.am: don't install the man page, it's outdated

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: make .cpio.gz have precendence over .gz
	(Closes: #126470)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: use Documents/TeX for TeX files, and
	Documents/Published Materials for DVI files (Closes: #119894)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications: use "gimp-remote" in place of "gimp"
	to allow the use of an existing instance (Closes: #99272)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add Objective-C support (patch from PUYDT Julien
	<julien.puydt@laposte.net>) (Closes: #126473)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: rename video/vivo to video/vnd.vivo, remove
	xanim and xmps as handlers for video files, mark a few strings
	for translation (Closes: #94214)

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added support for video/dv as per RFC 3189

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added audio/x-ms-wax (Windows Audio Playlist)
	mime-type

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: .m4a for MPEG-4 audio

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added MPEG-4 audio detection and mime-type
	(audio/x-m4a)

2003-11-05  Bastien Nocera  <hadess@hadess.net>
